# python-dawaco-tools

./: .gitignore  .prettierignore  LICENSE  README.md  __init__.py  environment.yml  pyproject.toml  ruff.toml  ruff_defaults.toml  setup.py
.github/: copilot-instructions.md
.github/instructions/: bas-code-optimizer.agent.md  bas-physics-code-reviewer.agent.md  bas-test-reviewer.agent.md
.github/workflows/: functional_testing.yml  linting.yml
dawacotools/: __init__.py  analysis.py  colors.py  dawacotools.py  hwl.py  io.py  io_plenty.py  plot.py  test.py
dawacotools/tests/: test_analysis.py  test_io.py
dawacotools/tutorials/: dawacotools_tutorial_1.ipynb  py_exploratory_comp_2.ipynb  py_exploratory_comp_3.ipynb  py_exploratory_comp_8.ipynb
tests/: __init__.py  conftest.py  mock_dawaco.py  test_analysis.py  test_database_config.py  test_io.py  test_io_plenty.py  test_live_database.py  test_plot.py
tests/tutorials/: __init__.py  failing_notebook.ipynb  test_tutorials.py
tutorials/: README.md
tutorials/Tutorial 1 - Python algemeen/: py_exploratory_comp_1.ipynb  py_exploratory_comp_2.ipynb  py_exploratory_comp_3.ipynb
tutorials/Tutorial 2 - Tijdreeksen met Pandas/: py_exploratory_comp_8.ipynb
tutorials/Tutorial 3 - Grondwaterstanden met Dawacotools/: dawacotools_tutorial_1.ipynb
workflows/KNMIneerslagsom/: neerslagsom.py
workflows/L_buis_koppeling/: l_buis_koppeling.py
workflows/TRA debiet/: mps_debiet.py
workflows/boris_artikel_2026/: artikel_2026.py
workflows/ellitrack/: __init__.py  io.py
workflows/extract_sql_tables/: extract_sql_tables.py
workflows/filter_metadata/: filter_metadata.py
workflows/gwk_from_dawacodb/: gwk.sql
workflows/localdb/: export_andijk.py  to_pastastore.py
workflows/max_gws_per_maand/: max_gws_per_maand.py
workflows/mp_info/: mpinfo.py
workflows/read_taakkaart/: __init__.py  read_taakkaart.py
workflows/redox_analyse/: filter_redox.py
workflows/spatial_gws/: filters.py  map_gws.py
