[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dawacotools"
version = "0.0.1"
description = "Dawacotools by PWN"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bas des Tombe", email = "bdestombe@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research", 
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "pandas[parquet,feather,performance,excel]",
    "geopandas",
    "matplotlib",
    "pyodbc",
    "xarray",
    "netcdf4>=1.7.2",
    "openpyxl",
    "rasterio",
    "contextily",
    "hydropandas",
    "lxml",
    "pastastore",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/bdestombe/python-dawaco-tools"
Repository = "https://github.com/bdestombe/python-dawaco-tools"
Issues = "https://github.com/bdestombe/python-dawaco-tools/issues"

[tool.setuptools]
packages = ["dawacotools"]

[tool.setuptools.package-dir]
"" = "."